--- a/shopping card/index.html
+++ b/shopping card/index.html
@@ -10,7 +10,15 @@
 <button>purchase</button>
 
     <script>
+  let cart = [];
+  function addCartItems(item) {
+    cart.push(item);
+    consol.log('$(item)is added into cards');
+  }
 
+  function removeCardItemes(item) {
+    let index = card .index(item);
+  }
     </script>
 </body>
 </html>
