--- a/shopping card/index.html
+++ b/shopping card/index.html
@@ -15,7 +15,7 @@
 <script>
 
     let item = [
-        { name: "bag", qty: 12, price: 200 },
+        { name: "bag", qty: 12, price: 600 },
         { name: "shoes", qty: 13, price: 3000 },
         { name: "cloths", qty: 15, price: 5000 },
         { name: "perfumes", qty: 10, price: 1000 },
@@ -23,42 +23,51 @@
 
 
     let cart = [];
+
+
     console.log(item)
     console.log(cart)
+
+
     for (let i = 0; i < item.length; i++) {
         console.log(item[i].name)
     }
-    function addCartItems() {
-        1 = "bag";
-        2 = "shoes";
-        3 = "cloths"
-        4 = "perfumes"
-        let adding = parseInt(prompt('chose what you want to buy from 1 to 4'))
-        if (adding == 1) {
-            let quant = parseInt(prompt("Enter the quantity"))
-            cart.push({ prodtobuy: adding, quantity: quant })
-            let pricee = quant * item[0].price
-        }
-        else if (adding == 2) {
-            let quant = parseInt(prompt("Enter the quantity"))
-            cart.push({ prodtobuy: adding, quantity: quant })
-            let pricee = quant * item[1].price
-        }
-        else if (adding == 3) {
-            let quant = parseInt(prompt("Enter the quantity"))
-            cart.push({ prodtobuy: adding, quantity: quant })
-            let pricee = quant * item[2].price
-        }
-        else if (adding == 4) {
-            let quant = parseInt(prompt("Enter the quantity"))
-            cart.push({ prodtobuy: adding, quantity: quant })
-            let pricee = quant * item[3].price
-        }
+
+    // function addCartItems(){
+        // let adding = parseInt(prompt('chose what you want to buy \n1 - bag\n2 - sheos\n3 - cloths\n4 -prfumes'));
+
+        function addCartItems() {
+           let adding = parseInt(prompt('Choose an item (1–4):'));
+            let quant = 0;
+            let pricee = 0;
+            let product = null;
+
+            
 
         console.log(`The product you bought is ${adding} at the price of ${pricee}`)
 
+        if (isNaN(adding) || adding < 1 || adding > 4) {
+        alert("Invalid choice. Please enter a number between 1 and 4.");
+        return; // Stop the function
+    }
+
+     quant = parseInt(prompt("Enter the quantity"));
+
+    if (isNaN(quant) || quant <= 0) {
+        alert("Invalid quantity. Please enter a number greater than 0.");
+        return;
+    }
+
+     product = item[adding - 1];
+    let price = quant * product.price;
+
+    cart.push({ prodtobuy: product.name, quantity: quant, total: price });
+
+    alert(`You bought ${quant} ${product.name}(s) for ₦${price}`);
+    console.log("Cart:", cart);
 
     }
+//    }
     console.log(addCartItems())
 </script>
 
