--- a/day 16/Iindex.html
+++ b/day 16/Iindex.html
@@ -6,8 +6,9 @@
     <title>objects in js</title>
 </head>
 <body>
+    <h1 id="title">Welcome</h1>
 
-
+    
     <script src="index.js"></script>
 </body>
 </html>
